[gd_scene load_steps=2 format=3 uid="uid://c0w8q1k2b6s3j"]

[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Center" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBox" type="VBoxContainer" parent="Center"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Title" type="Label" parent="Center/VBox"]
layout_mode = 2
text = "Blood Contract (PoC)"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="Center/VBox"]
layout_mode = 2
text = "Start"

[node name="TC04Button" type="Button" parent="Center/VBox"]
layout_mode = 2
text = "TC04 (Spike Arena)"

[node name="SettingsButton" type="Button" parent="Center/VBox"]
layout_mode = 2
text = "Settings (TODO)"

[node name="QuitButton" type="Button" parent="Center/VBox"]
layout_mode = 2
text = "Quit"
